# visualsign-parser

./: .cla-signed-users  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  IDIOMATIC_RUST_AND_COVERAGE_REPORT.md  Makefile  PLAN.md  README.md  SECURITY.md  TVC_E2E_DEPLOYMENT_TEST.md  compose.mock.yml  compose.payai.yml  manifest.json  repositories
src/: Cargo.toml  Makefile  rust-toolchain.toml  test_decoder.rs
src/chain_parsers/visualsign-ethereum/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DECODER_GUIDE.md  build.rs  clippy.toml
src/chain_parsers/visualsign-ethereum/examples/: eip712_permit.rs  parse_real_v4_tx.rs  parse_v4.rs  simulate_v4.rs  tx_initializev4.txt  tx_setoperator.txt  tx_swapv4.txt
src/chain_parsers/visualsign-ethereum/examples/using_abijson/: README.md  TESTING.md  main.rs
src/chain_parsers/visualsign-ethereum/src/: abi_decoder.rs  abi_metadata.rs  abi_registry.rs  cli_plugin.rs  context.rs  embedded_abis.rs  eth_json.rs  fmt.rs  grpc_abi.rs  lib.rs  networks.rs  partial_transaction.rs  registry.rs  token_metadata.rs  visualizer.rs
src/chain_parsers/visualsign-ethereum/src/contracts/: erc20.rs  uniswap.rs
src/chain_parsers/visualsign-ethereum/src/eip712/: encoding.rs  fallback.rs  mod.rs  payload.rs  visualizer.rs
src/chain_parsers/visualsign-ethereum/src/protocols/: mod.rs
src/chain_parsers/visualsign-ethereum/src/provider/: json_abi.rs  mod.rs
src/chain_parsers/visualsign-ethereum/tests/: lib_test.rs
src/chain_parsers/visualsign-ethereum/tests/fixtures/: 1559.expected  aave_supply.expected  aave_supply.input  eip712-erc2612-permit.expected  json-eip1559.expected  (+12 more)
src/chain_parsers/visualsign-goethereum/: Cargo.toml  Makefile  build.rs  go.mod
src/chain_parsers/visualsign-goethereum/go/: clib.go  clib_test.go  eth_contract_test.go  eth_simple_test.go  lib.go  main.go  visualsign.go
src/chain_parsers/visualsign-goethereum/src/: lib.rs
src/chain_parsers/visualsign-solana/: .gitignore  Cargo.toml  TESTING.md  build.rs  clippy.toml
src/chain_parsers/visualsign-solana/fuzz/: Cargo.toml  rust-toolchain.toml
src/chain_parsers/visualsign-solana/scripts/: generate-fixture.sh
src/chain_parsers/visualsign-solana/src/: cli_plugin.rs  intermediate.rs  lib.rs  oldlib.rs
src/chain_parsers/visualsign-solana/tests/: builtin_idl_override.rs  dump_spl_b64.rs  fuzz_idl_parsing.proptest-regressions  fuzz_idl_parsing.rs  pipeline_integration.proptest-regressions  pipeline_integration.rs  policy_examples.rs  preset_conventions.rs  prs223_builtin_idl_override.rs  real_idl_validation.rs  semantic_pipeline.rs  spl_token_e2e.rs  surfpool_fuzz.rs
src/chain_parsers/visualsign-sui/: CONTRIBUTING.md  Cargo.toml  build.rs
src/chain_parsers/visualsign-sui/src/: lib.rs  visualsign.rs
src/chain_parsers/visualsign-tron/: Cargo.toml
src/chain_parsers/visualsign-tron/src/: cli_plugin.rs  lib.rs
src/chain_parsers/visualsign-unspecified/: Cargo.toml
src/chain_parsers/visualsign-unspecified/src/: lib.rs
src/codegen/: Cargo.toml
src/codegen/src/: main.rs
src/examples/: Cargo.toml  library_integration_test.rs
src/health_check/: Cargo.toml
src/health_check/src/: lib.rs
src/host_primitives/: Cargo.toml
src/host_primitives/src/: lib.rs  payment_marker.rs  turnkey.rs
src/integration/: .gitignore  Cargo.toml
src/integration/fixtures/devnet/: README.md  wallet.address  wallet.seed
src/integration/src/: lib.rs  solana_x402_client.rs
src/integration/tests/: parser.rs  signature_metadata_e2e.rs  signature_metadata_test.rs  x402_gateway_test.rs  x402_payai_devnet_test.rs
src/metrics/: Cargo.toml
src/metrics/examples/: demo.rs
src/metrics/src/: lib.rs
src/parser/app/: Cargo.toml  build.rs
src/parser/app/src/: chain_conversion.rs  cli.rs  errors.rs  host.rs  lib.rs  main.rs  payment_verify.rs  registry.rs  service.rs
src/parser/cli/: Cargo.toml  build.rs
src/parser/cli-core/: Cargo.toml  clippy.toml
src/parser/cli-core/src/: chains.rs  lib.rs  mapping_parser.rs  output.rs  test_utils.rs  tx_input.rs
src/parser/cli/src/: chains.rs  cli.rs  display.rs  ethereum.rs  lib.rs  main.rs  mapping_parser.rs  serve.rs  solana.rs  test_utils.rs  tron.rs  tx_input.rs
src/parser/cli/tests/: cli_test.rs
src/parser/gateway/: Cargo.toml  README.md
src/parser/gateway/src/: attestation.rs  auth.rs  lib.rs  main.rs  signing.rs  state.rs  x402_config.rs
src/parser/grpc-server/: Cargo.toml  build.rs
src/parser/grpc-server/src/: main.rs
src/parser/host/: Cargo.toml
src/parser/host/src/: cli.rs  host.rs  lib.rs  main.rs
src/parser/http-server/: Cargo.toml
src/parser/http-server/src/: main.rs
src/parser/mock-facilitator/: Cargo.toml  build.rs
src/parser/mock-facilitator/src/: lib.rs  main.rs
src/parser/sidecar/: Cargo.toml
src/parser/sidecar/src/: main.rs
src/solana_test_utils/: .gitignore  Cargo.toml  NIGHTLY.md
src/solana_test_utils/src/: lib.rs
src/solana_test_utils/src/fixtures/: builder.rs
src/solana_test_utils/src/idl_strategies/: bytes.rs  mod.rs
src/solana_test_utils/src/nightly/: fetcher.rs  runner.rs
src/solana_test_utils/src/surfpool/: config.rs  manager.rs
src/solana_test_utils/src/validation/: assertions.rs  validator.rs
src/solana_test_utils/tests/: nightly_jupiter.rs  surfpool_fuzz.rs  surfpool_tests.rs
src/test_decoder/: Cargo.toml  QUICKSTART.md  README.md
src/test_decoder/src/: main.rs
src/tools/idl-meta/: Cargo.toml
src/tools/idl-meta/src/: main.rs
src/visualsign/: Cargo.toml  README.md
src/visualsign/examples/: check_anchorage_render.rs
src/visualsign/src/: anchorage_render.rs  encodings.rs  errors.rs  field_builders.rs  lib.rs  lint.rs  registry.rs  signing.rs  test_utils.rs  time_fmt.rs  utils.rs  vsptrait.rs
src/wasm/: .gitignore  Cargo.toml  package.json  test-simple.js  test.html
src/wasm/src/: lib.rs
tools/tvc-deploy/: Cargo.toml  README.md
tools/tvc-deploy/src/: invite.rs  main.rs
tools/tvc-deploy/templates/: readonly-policy.json  readonly-policy.vars.example.json  releaser-initiator-policies.json  releaser-initiator-policies.vars.example.json
(+373 files in other folders)
