[workspace]
members = [
  "codegen",
  "examples",
  "generated",
  "health_check",
  "host_primitives",
  "integration",
  "metrics",
  "parser/app",
  "parser/cli",
  "parser/gateway",
  "parser/grpc-server",
  "parser/mock-facilitator",
  "visualsign",
  "chain_parsers/visualsign-ethereum",
  "chain_parsers/visualsign-solana",
  "chain_parsers/visualsign-sui",
  "chain_parsers/visualsign-tron",
  "chain_parsers/visualsign-unspecified",
  "solana_test_utils",
  "tools/idl-meta",
]

resolver = "3"

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/anchorageoss/visualsign-parser"

[workspace.dependencies]
# See https://doc.rust-lang.org/nightly/cargo/reference/workspaces.html#the-dependencies-table

# qos dependencies. Two distinct revs matter:
#   * Library rev (the `rev = "..."` on each crate below) — compiled into parser_app
#     so it links against qos_core etc.
#   * Deployment rev — the qos version whose EIF actually boots in the Nitro enclave
#     and is measured by PCRs in attestation documents. They are not required to
#     match. The deployment rev currently tracks TVC v2026.2.6:
#       https://github.com/tkhq/qos/commit/d866f2c6cbc58cc08c24eab4828f0824ad16a226
#       PCRs from upstream CI:
#       https://github.com/tkhq/qos/actions/runs/22202233633/job/64217796901
#     scripts/extract-nitro-pcrs.sh reads the marker line below to reproduce them.
# qos-deployment-rev = d866f2c6cbc58cc08c24eab4828f0824ad16a226
qos_client = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }
qos_core = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }
qos_crypto = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }
qos_hex = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }
qos_net = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }
qos_nsm = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }
qos_p256 = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }
qos_test_primitives = { git = "https://github.com/tkhq/qos.git", rev = "365ba7ed529bc5af617bcfb27502c3efce8b37ae", default-features = false }

# Common dependencies
base64 = "0.22.1"
hex = "0.4.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

tokio = { version = "1.43.1", default-features = false }

tracing = "0.1.41"

# Pin visualsign dependencies
visualsign = { path = "./visualsign" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
disallowed_types = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

