[package]
name = "health_check"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
qos_core = { workspace = true}
qos_crypto = { workspace = true}
generated = { path = "../generated", features = ["tonic_types"] }
host_primitives = { path = "../host_primitives", default-features = false }

tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
], default-features = false }
tokio-stream = { version = "0.1", default-features = false }
borsh = { version = "1.0", features = [
  "std",
  "derive",
], default-features = false }
