[package]
name = "host_primitives"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
qos_core = { workspace = true}

tonic = { version = "0.9", default-features = false }
prost = { version = "0.11", features = [
  "prost-derive",
  "std",
], default-features = false }
borsh = { version = "1.0", features = [
  "std",
  "derive",
], default-features = false }
