[package]
name = "tvc-deploy"
version = "0.1.0"
edition = "2021"
description = "Standalone TVC deploy helper for parser_app (operator-key minting + deploy orchestration)"

[[bin]]
name = "tvc-deploy"
path = "src/main.rs"

[dependencies]
qos_p256 = { version = "0.6.1", default-features = false }
serde_json = "1"

# Own workspace root so this stays independent of the parser cargo workspace
# under ../../src and compiles fast on its own.
[workspace]
