[package]
name = "visualsign-ethereum"
version = "0.1.0"
edition = "2024"

[dependencies]
visualsign = {workspace = true}
hex = "0.4.3"
base64 = "0.22.1"
# Ethereum-specific dependencies
ethers = "2.0"
# Or alternatively, use alloy
# alloy = "0.1"
rlp = "0.5"
ethereum-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
