[package]
name = "visualsign-ethereum"
version = "0.1.0"
edition = "2024"

[features]
default    = ["cli-plugin"]
cli-plugin = ["dep:clap", "dep:parser_cli_core"]

# Dev-only ABI signing helpers (CLI_DEV_SIGNING_KEY_SEED, sign_abi). Off by
# default so production builds never link the dev key and `authorized_abi_signers`
# never allowlists the well-known dev pubkey. Only parser_cli enables this.
#
# Keep-out-of-prod, mirroring parser_app's `diagnostics` feature: Cargo unifies
# features per invocation, so a build that compiles parser_cli AND parser_app in the
# same graph (a bare `cargo build` / `cargo build --workspace` from src/) turns
# dev-signing ON for parser_app too, which would allowlist the public dev seed there.
# Shippable parser_app binaries are built package-scoped (the Containerfile builds
# from parser/app; the Makefile uses `cargo build --workspace --exclude parser_cli`
# then `cargo build -p parser_cli`), which keeps this OFF for parser_app. Do not
# build a production parser_app with a bare workspace build.
dev-signing = []

[dependencies]
alloy-consensus = "1.2.1"
alloy-contract = "1.2.1"
alloy-dyn-abi = "1.4.1"
alloy-json-abi = "1.5.2"
alloy-primitives = "1.3.0"
alloy-rlp = "0.3.12"
alloy-sol-types = "1.4.1"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["std", "clock"] }
clap            = { version = "4.0", features = ["derive"], optional = true }
generated = { path = "../../generated" }
hex = "0.4.3"
k256 = { version = "0.12", features = ["ecdsa"], default-features = false }
log = "0.4"
num_enum = "0.7.2"
parser_cli_core = { path = "../../parser/cli-core", optional = true }
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.12"
visualsign = { workspace = true }

[dev-dependencies]
parser_cli_core = { path = "../../parser/cli-core", features = ["test-utils"] }

[lints]
workspace = true
