[package]
name = "visualsign-solana"
version = "0.1.0"
edition = "2024"

[dependencies]

tracing = { workspace = true }
# Using custom fork for IDL-based instruction parsing features not yet in upstream
# Features: parse_instruction_with_idl, CustomIdlConfig, decode_idl_data
# Tracking: https://github.com/tkhq/solana-parser/pull/20
solana_parser = { git = "https://github.com/prasincs/solana-parser.git", rev = "8248d99e42ce8a56ad440ed9b2201607feb1a150" }
visualsign = { workspace = true }
generated = { path = "../../generated" }
serde_json = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1"
borsh = "1.5.5"
bincode = "1.3.3"
solana-sdk = "2.1.15"
solana-transaction-status = "2.2.7"
solana-program = "2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0"
spl-stake-pool = "2.0.2"
solana-system-interface = "1.0"
spl-token-2022 = "10.0.0"
spl-token-2022-interface = "2.1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jupiter-swap-api-client = "0.2.0"
base64 = "0.22.1"
bs58 = "0.5"
