[package]
name = "visualsign-solana"
version = "0.1.0"
edition = "2024"

[features]
default    = ["cli-plugin"]
cli-plugin = ["dep:clap", "dep:parser_cli_core", "dep:bs58"]
diagnostics = ["visualsign/diagnostics"]

[dependencies]
bs58            = { version = "0.5", optional = true }
clap            = { version = "4.0", features = ["derive"], optional = true }
parser_cli_core = { path = "../../parser/cli-core", optional = true }

tracing = { workspace = true }
solana_parser = { git = "https://github.com/anchorageoss/solana-parser.git", rev = "2146929" }
visualsign = { workspace = true }
generated = { path = "../../generated" }
serde_json = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1"
borsh = "1.5.5"
bincode = "1.3.3"
solana-sdk = "2.1.15"
solana-transaction-status = "2.2.7"
solana-program = "2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0"
spl-stake-pool = "2.0.2"
solana-system-interface = "1.0"
spl-token-2022 = "10.0.0"
spl-token-2022-interface = "2.1.0"
# IDL signature validation. Solana uses ed25519 (its native curve); see
# `idl/signature.rs`. The Ethereum ABI path uses secp256k1 for its own curator
# key. Both verify a curator signature, not the program's on-chain authority.
ed25519-dalek = "2"
thiserror = "2.0.12"

[dev-dependencies]
parser_cli_core = { path = "../../parser/cli-core", features = ["test-utils"] }
solana-parser-fuzz-core = { git = "https://github.com/anchorageoss/solana-parser.git", rev = "2146929", features = ["proptest"] }
solana_test_utils = { path = "../../solana_test_utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jupiter-swap-api-client = "0.2.0"
base64 = "0.22.1"
bs58 = "0.5"
proptest = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
