[package]
name = "parser_app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
borsh = { version = "1.5.7", features = [
  "std",
], default-features = false }
qos_core = { workspace = true }
qos_crypto = { workspace = true }
qos_hex = { workspace = true }
qos_p256 = { workspace = true }
generated = { path = "../../generated" }
health_check = { path = "../../health_check" }
host_primitives = { path = "../../host_primitives" }
metrics = { path = "../../metrics" }
visualsign = {workspace = true}
visualsign-ethereum = { path = "../../chain_parsers/visualsign-ethereum", optional = true }
visualsign-solana = { path = "../../chain_parsers/visualsign-solana", optional = true }
visualsign-sui = { path = "../../chain_parsers/visualsign-sui", optional = true }
visualsign-tron = { path = "../../chain_parsers/visualsign-tron", optional = true }
visualsign-unspecified = { path = "../../chain_parsers/visualsign-unspecified", optional = true }

serde_json = "1"
serde = { version = "1", features = ["derive"], default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
bincode = "1.3.3"

bs58 = { version = "0.5.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

# VPM verification
subtle = { version = "2", default-features = false }
thiserror = "1"

[features]
# diagnostics is intentionally NOT in `default`: parser_app is the production
# binary, and `cargo build --workspace --exclude parser_cli` (see Makefile)
# relies on diagnostics being OFF for parser_app/integration to keep the
# production payload shape. Opt in explicitly with `--features diagnostics`.
default = ["ethereum", "solana", "sui", "tron", "unspecified"]
ethereum = ["dep:visualsign-ethereum"]
solana = ["dep:visualsign-solana"]
sui = ["dep:visualsign-sui"]
tron = ["dep:visualsign-tron"]
unspecified = ["dep:visualsign-unspecified"]
diagnostics = ["visualsign/diagnostics", "visualsign-solana?/diagnostics"]
vsock = ["qos_core/vm"]

[lints]
workspace = true
