[package]
name = "parser_cli_core"
version = "0.1.0"
edition = "2024"
publish = false

[features]
# Exposes test helper utilities for use in downstream crates' test suites.
test-utils = []

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hex = { workspace = true }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
tracing = { workspace = true }

generated   = { path = "../../generated" }
visualsign  = { workspace = true }

[lints]
workspace = true
