[package]
name = "parser_cli"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["solana", "ethereum"]
solana = ["dep:visualsign-solana"]
ethereum = ["dep:visualsign-ethereum"]
serve = ["dep:axum", "dep:tokio"]

[dependencies]
tracing = { workspace = true }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

borsh = { version = "1.5.7", features = ["std"], default-features = false }
generated = { path = "../../generated" }
visualsign = { workspace = true }
visualsign-ethereum = { path = "../../chain_parsers/visualsign-ethereum", optional = true }
visualsign-solana = { path = "../../chain_parsers/visualsign-solana", optional = true }

serde_json = "1"
serde = { version = "1", features = ["derive"], default-features = false }
bincode = "1.3.3"

clap = { version = "4.0", features = ["derive"] }

bs58 = { version = "0.5.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
similar = "2.7.0"

axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "tokio", "query", "json"] }
tokio = { workspace = true, optional = true, features = ["rt", "macros", "net"] }

[lints]
workspace = true
