[package]
name = "parser_cli"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["solana", "ethereum", "tron", "diagnostics"]
solana = ["dep:visualsign-solana"]
ethereum = ["dep:visualsign-ethereum"]
tron = ["dep:visualsign-tron"]
diagnostics = ["visualsign/diagnostics", "visualsign-solana?/diagnostics"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
parser_cli_core = { path = "../cli-core" }
visualsign  = { workspace = true }
visualsign-ethereum = { path = "../../chain_parsers/visualsign-ethereum", optional = true }
visualsign-solana   = { path = "../../chain_parsers/visualsign-solana",   optional = true }
visualsign-tron     = { path = "../../chain_parsers/visualsign-tron",     optional = true }

tracing = { workspace = true }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
parser_cli_core = { path = "../cli-core", features = ["test-utils"] }
serde_json = "1"
similar = "2.7.0"

[lints]
workspace = true
