[package]
name = "parser_gateway"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
generated = { path = "../../generated", features = ["tonic_types"] }
health_check = { path = "../../health_check" }
host_primitives = { path = "../../host_primitives" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
serde_json = { workspace = true }
axum = { version = "0.6.20", features = ["http1", "tokio", "json"], default-features = false }
serde = { workspace = true }

[lints]
workspace = true
