[package]
name = "parser_gateway"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# internal paths
generated = { path = "../../generated", features = ["tonic_types", "serde_derive"] }
health_check = { path = "../../health_check" }
host_primitives = { path = "../../host_primitives" }

# core runtime + serialization
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# axum
axum = { version = "0.8", features = ["http1", "tokio", "json"], default-features = false }

# x402
x402-axum = "1.4"
x402-types = "1.4"
x402-chain-eip155 = { version = "1", features = ["server"] }
x402-chain-solana = { version = "1", features = ["server"] }

# supporting primitives
alloy-primitives = "1"
solana-pubkey = "2"
rust_decimal = "1"
url = "2"

# error handling
thiserror = "1"

# http client (for startup facilitator probe, Task 9)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[lib]
name = "parser_gateway"
path = "src/lib.rs"

[[bin]]
name = "parser_gateway"
path = "src/main.rs"

[lints]
workspace = true
