[package]
name = "parser_gateway"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# internal paths
generated = { path = "../../generated", features = ["tonic_types", "serde_derive"] }
health_check = { path = "../../health_check" }
host_primitives = { path = "../../host_primitives" }

# core runtime + serialization
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# axum
axum = { version = "0.8", features = ["http1", "tokio", "json"], default-features = false }

# x402
x402-axum = "1.4"
x402-types = "1.4"
x402-chain-eip155 = { version = "1", features = ["server"] }
x402-chain-solana = { version = "1", features = ["server"] }

# supporting primitives
alloy-primitives = "1"
solana-pubkey = "2"
rust_decimal = "1"
url = "2"

# attestation: verifies the TVC ephemeral-key signature on the parse response
qos_p256 = { workspace = true }
qos_hex = { workspace = true }
qos_crypto = { workspace = true } # sha_256 for VPM hashing
subtle = { version = "2", default-features = false }

# Borsh: canonical encoding for the VerifiedPaymentMarker (VPM) the gateway
# signs and parser_app verifies. Must match wire-for-wire between the two
# crates, hence borsh (deterministic, schema-validated) over serde_json.
borsh = { version = "1", features = ["std", "derive"], default-features = false }

# Base64 for X-PAYMENT body decoding (we hash the inner bytes for x_payment_hash).
base64 = "0.22"

# error handling
thiserror = "1"

# http client (for startup facilitator probe, Task 9)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[lib]
name = "parser_gateway"
path = "src/lib.rs"

[[bin]]
name = "parser_gateway"
path = "src/main.rs"

[[bin]]
name = "gateway_keygen"
path = "src/bin/gateway_keygen.rs"

[lints]
workspace = true
