[package]
name = "mock_facilitator"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { version = "0.8", features = ["http1", "tokio", "json"], default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"

[lib]
name = "mock_facilitator"
path = "src/lib.rs"

[[bin]]
name = "mock_facilitator"
path = "src/main.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
